; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_set_rate.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_set_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_rate = type { i32 }

@LEV_TARG_RATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_set_rate(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.lev_rate*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @get_user(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

11:                                               ; preds = %2
  %12 = load i32, i32* @LEV_TARG_RATE, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call %struct.lev_rate* @alloc_log_event(i32 %12, i32 12, i32 %13)
  store %struct.lev_rate* %14, %struct.lev_rate** %6, align 8
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.lev_rate*, %struct.lev_rate** %6, align 8
  %17 = getelementptr inbounds %struct.lev_rate, %struct.lev_rate* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load %struct.lev_rate*, %struct.lev_rate** %6, align 8
  %19 = call i32 @set_rate(%struct.lev_rate* %18)
  store i32 1, i32* %3, align 4
  br label %20

20:                                               ; preds = %11, %10
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @get_user(i32) #1

declare dso_local %struct.lev_rate* @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @set_rate(%struct.lev_rate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
